--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
         <title>Yew | Rust Client Example</title>
         <link rel="stylesheet" href="styles/base.css" />
         <link rel="stylesheet" href="styles/index.css" />
+        <link rel="stylesheet" href="styles/transitions.css" />
     </head>
     <body>
         <main id="app"></main>
