--- a/static/index.html
+++ b/static/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8" />
         <title>Yew | Rust Client Example</title>
-        <link rel="stylesheet" href="styles/base.css" />
-        <link rel="stylesheet" href="styles/index.css" />
-        <link rel="stylesheet" href="styles/transitions.css" />
+        <link rel="stylesheet" href="/styles/base.css" />
+        <link rel="stylesheet" href="/styles/index.css" />
+        <link rel="stylesheet" href="/styles/transitions.css" />
     </head>
     <body>
         <main id="app"></main>
         <script type="module">
-            import init from './build/wasm.js';
+            import init from '/build/wasm.js';
             init();
         </script>
     </body>
