--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="/styles/base.css" />
         <link rel="stylesheet" href="/styles/index.css" />
         <link rel="stylesheet" href="/styles/transitions.css" />
+
+        <script async defer src="https://buttons.github.io/buttons.js"></script>
     </head>
     <body>
         <main id="app"></main>
